--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -9,6 +9,8 @@ layout: default
         <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/{% if site.author-img %}{{site.author-img}}{% endif %}" alt="{{site.author}}"></a>
       </div>
       <div class="author-name">{{site.author}}</div>
+      <p>{{site.location}}</p>
+      <br>
       <p>{{site.about-author}}</p>
     </div>
   </header> <!-- End Header -->
