--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
+<script src="{{ "/assets/js/prism.js" | prepend: site.baseurl }}"></script>
 <body>
 
   <div class="wrapper">
