--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 {% include head.html %}
-<script src="{{ "/assets/js/prism.js" | prepend: site.baseurl }}"></script>
 <body>
-
-  <div class="wrapper">
-    {{ content }}
-  </div>
-  
-  {% include analytics.html %}
+    <input id="nm-switch" type="hidden" value="{{ site.nightMode }}">
+    <div class="visible">
+      {{ content }}
+    </div>
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="{{ "/assets/js/prism.js" | relative_url }}"></script>
+    <script src="{{ "/assets/js/index.min.js" | relative_url }}"></script>
 </body>
 </html>
