--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 {% include head.html %}
 <body>
-    <input id="nm-switch" type="hidden" value="{{ site.nightMode }}">
-    <div class="visible">
-      {{ content }}
-    </div>
-    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-    <script src="{{ "/assets/js/prism.js" | relative_url }}"></script>
-    <script src="{{ "/assets/js/index.min.js" | relative_url }}"></script>
+
+  <div class="wrapper">
+    {{ content }}
+  </div>
+  
+  {% include analytics.html %}
 </body>
 </html>
