--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -140,7 +140,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
+  font-family: 'Lato', monospace;
   /* 1 */
   font-size: 1em;
   /* 2 */
@@ -445,7 +445,7 @@ template {
 
 .highlighter-rouge {
   color: #ce887b;
-  font-weight: 400;
+  font-weight: 600;
   border: 1px solid #607D8B;
   -webkit-border-radius: 3px;
           border-radius: 3px;
